# QXlsxReader

./: CMakeLists.txt  excelmanager.cpp  excelmanager.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
